Update swagger docs and infra log
